@@ -411,12 +411,14 @@ extern const u8g2_cb_t u8g2_cb_r1;
 extern const u8g2_cb_t u8g2_cb_r2;
 extern const u8g2_cb_t u8g2_cb_r3;
 extern const u8g2_cb_t u8g2_cb_mirror;
+extern const u8g2_cb_t u8g2_cb_mirror_vertical;
 
 #define U8G2_R0	(&u8g2_cb_r0)
 #define U8G2_R1	(&u8g2_cb_r1)
 #define U8G2_R2	(&u8g2_cb_r2)
 #define U8G2_R3	(&u8g2_cb_r3)
 #define U8G2_MIRROR	(&u8g2_cb_mirror)
+#define U8G2_MIRROR_VERTICAL	(&u8g2_cb_mirror_vertical)
 /*
   u8g2:			A new, not yet initialized u8g2 memory areay
   buf:			Memory are of size tile_buf_height*<width of the display in pixel>
