@@ -256,4 +256,6 @@ https://github.com/olikraus/u8g2 ChangeLog
   * Added support for KS0713 controller (issue 1314)
   * Added support for ST7567_HEM6432 (issue 1159)
   * U8g2 16 Bit Mode enabled by default for ARM and ESP Systems (issue 1222)
+2021-04-18  v2.28.11  mattnutsch@gmail.com
+  * Added vertical mirror option for u8g2.
   
